[gd_scene load_steps=8 format=3 uid="uid://uxejdnhkg5fj"]

[ext_resource type="Texture2D" uid="uid://bcovkughj6dqx" path="res://ObjectAssets/KEY.png" id="1_adfbq"]
[ext_resource type="Script" path="res://script/key.gd" id="1_ty1r1"]
[ext_resource type="AudioStream" uid="uid://djddruh3eq120" path="res://audio/mixkit-unlock-game-notification-253.wav" id="3_dodt8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vdxw0"]
radius = 7.0

[sub_resource type="Animation" id="Animation_nfew4"]
resource_name = "new_animation"
loop_mode = 2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_4yiu2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cy2mp"]
_data = {
"RESET": SubResource("Animation_4yiu2"),
"idle": SubResource("Animation_nfew4")
}

[node name="key" type="Area2D"]
script = ExtResource("1_ty1r1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vdxw0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_adfbq")
offset = Vector2(0, -3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cy2mp")
}
autoplay = "idle"

[node name="key_collected" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_dodt8")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="key_collected" to="." method="_on_key_collected_finished"]
